# wtfisthisytdownloader

./: .gitignore  CLAUDE.md  README.md  debug_formats.py  download_yt.py  pyproject.toml  setup.py  www.youtube.com_cookies (1).txt  www.youtube.com_cookies.txt
ytdl/: __init__.py  cli.py
