[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytdl-interactive"
version = "0.1.0"
description = "YouTube video downloader with interactive format selection"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "yt-dlp",
]

[project.scripts]
ytdl = "ytdl.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/ytdl"
